# k8s-todo-list

./: README.md  Tiltfile  cluster-config.yaml  devenv.nix  docker-bake.hcl
backend/: Cargo.toml  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: lib.rs
backend/entities/: Cargo.toml
backend/entities/src/: todo.rs
backend/k8s/: deployment.yaml
backend/migration/src/: lib.rs  m20250915_173902_create_todo_table.rs
backend/src/: main.rs
frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/.devcontainer/: Dockerfile  devcontainer.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.scss  app.spec.ts  app.ts
frontend/src/app/core/services/: todos.service.ts
infra/k8s/bases/: kustomization.yaml
infra/k8s/bases/backend/: deployment.yaml  kustomization.yaml  pvc.yaml  service.yaml
infra/k8s/bases/db/: kustomization.yaml  service.yaml  stateful-set.yaml
infra/k8s/bases/frontend/: deployment.yaml  kustomization.yaml  service.yaml
infra/k8s/bases/ingress/: ingress.yaml  kustomization.yaml
infra/k8s/bases/jobs/: hourly-todo-cron-job.yaml  kustomization.yaml
infra/k8s/bases/namespace/: kustomization.yaml
infra/k8s/bases/pv/: kustomization.yaml  pv.yaml
infra/k8s/components/grafana-alloy/: config.alloy  kustomization.yaml
infra/k8s/components/kube-prometheus-stack/: kustomization.yaml
infra/k8s/components/loki-stack/: kustomization.yaml  values.yaml
infra/k8s/overlays/dev/: kustomization.yaml
infra/k8s/overlays/dev/app/: kustomization.yaml
infra/k8s/overlays/dev/app/files/: backend.env
infra/k8s/overlays/dev/files/: db-auth.env  db-conf.env  db.env
