[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
reqwest = "0.12.19"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
