[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
reqwest = "0.12.19"
entities = { path = "../entities" }
migration = { path = "../migration" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
